[project]
name = "ping-service"
version = "0.1.0"
description = "VLESS key ping microservice"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.35.0",
    "httpx[socks]>=0.28.0",
    "websockets>=13.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]
